Do not demand specific availability zone
Not every OpenStack cluster can launch instances in availability zone
'nova'.

--- a/templates/vnfd-tosca.yaml.erb
+++ b/templates/vnfd-tosca.yaml.erb
@@ -23,7 +23,7 @@ topology_template:
             disk_size: 1 GB
       properties:
         image: cirros
-        availability_zone: nova
+        # availability_zone: nova
         mgmt_driver: noop
         config: |
           param0: key1
